fix UAT find course - close #125

--- a/UAT/B6115708_Test_Case.html
+++ b/UAT/B6115708_Test_Case.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 	<meta content="text/html; charset=UTF-8" http-equiv="content-type" />
-	<title>Create Course test suit</title>
+	<title>B6115708_Test_Case</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
@@ -41,7 +41,7 @@
 </tr>
 <tr><td>click</td><td>//div[@id='root']/div/header/header/div<datalist><option>//div[@id='root']/div/header/header/div</option><option>//header/div</option><option>css=div.makeStyles-root-18</option></datalist></td><td></td>
 </tr>
-<tr><td>type</td><td>id=Course_name<datalist><option>id=Course_name</option><option>name=CourseName</option><option>//input[@id='Course_name']</option><option>//div[@id='root']/div/header/header/div/article/div[4]/div[2]/div/div/input</option><option>//div[4]/div[2]/div/div/input</option><option>css=#Course_name</option></datalist></td><td>วิศวกรรมเซรามิก 2560</td>
+<tr><td>type</td><td>id=Course_name<datalist><option>id=Course_name</option><option>name=CourseName</option><option>//input[@id='Course_name']</option><option>//div[@id='root']/div/header/header/div/article/div[4]/div[2]/div/div/input</option><option>//div[4]/div[2]/div/div/input</option><option>css=#Course_name</option></datalist></td><td>COMPUTER ENGINEERING 2560</td>
 </tr>
 <tr><td>click</td><td>//div[@id='root']/div/header/header/div<datalist><option>//div[@id='root']/div/header/header/div</option><option>//header/div</option><option>css=div.makeStyles-root-18</option></datalist></td><td></td>
 </tr>
@@ -58,7 +58,57 @@
 </tbody></table>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">Failure case</td></tr>
+<tr><td rowspan="1" colspan="3">Faillure case 1</td></tr>
+</thead>
+<tbody>
+<tr><td>open</td><td>http://localhost:3000/course<datalist><option>http://localhost:3000/course</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>id=email<datalist><option>id=email</option><option>name=email</option><option>//input[@id='email']</option><option>//div[@id='root']/div/main/div/form/div/div/input</option><option>//input</option><option>css=#email</option></datalist></td><td></td>
+</tr>
+<tr><td>type</td><td>id=email<datalist><option>id=email</option><option>name=email</option><option>//input[@id='email']</option><option>//div[@id='root']/div/main/div/form/div/div/input</option><option>//input</option><option>css=#email</option></datalist></td><td>kwan@email.com</td>
+</tr>
+<tr><td>click</td><td>id=password<datalist><option>id=password</option><option>name=password</option><option>//input[@id='password']</option><option>//div[@id='root']/div/main/div/form/div[2]/div/input</option><option>//div[2]/div/input</option><option>css=#password</option></datalist></td><td></td>
+</tr>
+<tr><td>type</td><td>id=password<datalist><option>id=password</option><option>name=password</option><option>//input[@id='password']</option><option>//div[@id='root']/div/main/div/form/div[2]/div/input</option><option>//div[2]/div/input</option><option>css=#password</option></datalist></td><td>kwan</td>
+</tr>
+<tr><td>click</td><td>//div[@id='root']/div/main/div/form/a/span<datalist><option>//div[@id='root']/div/main/div/form/a/span</option><option>//a/span</option><option>css=span.MuiButton-label</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>//div[@id='root']/div/header/header/div[2]/div<datalist><option>//div[@id='root']/div/header/header/div[2]/div</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>//div[@id='root']/div/header/header/div[2]/div/a[2]/h6<datalist><option>//div[@id='root']/div/header/header/div[2]/div/a[2]/h6</option><option>//a[2]/h6</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>id=mui-component-select-DepartmentID<datalist><option>id=mui-component-select-DepartmentID</option><option>//body</option><option>css=body.vsc-initialized</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>//div[@id='menu-DepartmentID']/div[3]/ul/li[5]<datalist><option>//div[@id='menu-DepartmentID']/div[3]/ul/li[5]</option><option>//li[5]</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>id=mui-component-select-SubjectID<datalist><option>id=mui-component-select-SubjectID</option><option>//body</option><option>css=body.vsc-initialized</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>//div[@id='menu-SubjectID']/div[3]/ul/li<datalist><option>//div[@id='menu-SubjectID']/div[3]/ul/li</option><option>//li</option><option>css=li.MuiButtonBase-root.MuiListItem-root.MuiMenuItem-root.MuiMenuItem-gutters.MuiListItem-gutters.MuiListItem-button</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>id=mui-component-select-DegreeID<datalist><option>id=mui-component-select-DegreeID</option><option>//body</option><option>css=body.vsc-initialized</option><option>id=mui-component-select-SubjectID</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>//div[@id='menu-DegreeID']/div[3]/ul/li<datalist><option>//div[@id='menu-DegreeID']/div[3]/ul/li</option><option>//li</option><option>css=li.MuiButtonBase-root.MuiListItem-root.MuiMenuItem-root.MuiMenuItem-gutters.MuiListItem-gutters.MuiListItem-button</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>//div[@id='root']/div/header/header/div/article/div[4]<datalist><option>//div[@id='root']/div/header/header/div/article/div[4]</option><option>//div[4]</option></datalist></td><td></td>
+</tr>
+<tr><td>type</td><td>id=Course_name<datalist><option>id=Course_name</option><option>name=CourseName</option><option>//input[@id='Course_name']</option><option>//div[@id='root']/div/header/header/div/article/div[4]/div[2]/div/div/input</option><option>//div[4]/div[2]/div/div/input</option><option>css=#Course_name</option></datalist></td><td>===/=/=</td>
+</tr>
+<tr><td>click</td><td>//div[@id='root']/div/header/header/div<datalist><option>//div[@id='root']/div/header/header/div</option><option>//header/div</option><option>css=div.makeStyles-root-18</option></datalist></td><td></td>
+</tr>
+<tr><td>type</td><td>id=Teacher_id<datalist><option>id=Teacher_id</option><option>name=TeacherID</option><option>//input[@id='Teacher_id']</option><option>//div[@id='root']/div/header/header/div/article/div[5]/div[2]/div/div/input</option><option>//div[5]/div[2]/div/div/input</option><option>css=#Teacher_id</option></datalist></td><td>T0000001</td>
+</tr>
+<tr><td>click</td><td>//div[@id='root']/div/header/header/div<datalist><option>//div[@id='root']/div/header/header/div</option><option>//header/div</option><option>css=div.makeStyles-root-18</option></datalist></td><td></td>
+</tr>
+<tr><td>type</td><td>id=Course_year<datalist><option>id=Course_year</option><option>name=CourseYear</option><option>//input[@id='Course_year']</option><option>//div[@id='root']/div/header/header/div/article/div[6]/div[2]/div/div/input</option><option>//div[6]/div[2]/div/div/input</option><option>css=#Course_year</option></datalist></td><td>2560</td>
+</tr>
+<tr><td>click</td><td>//div[@id='root']/div/header/header/div/article/div[7]/button/span<datalist><option>//div[@id='root']/div/header/header/div/article/div[7]/button/span</option><option>//button/span</option><option>css=span.MuiButton-label</option></datalist></td><td></td>
+</tr>
+<tr><td>assertText</td><td>id=swal2-title<datalist><option>id=swal2-title</option><option>//h2[@id='swal2-title']</option><option>//h2</option><option>css=#swal2-title</option></datalist></td><td>ชื่อหลักสูตรต้องเป็น a-z หรือ A-Z หรือ 0-9</td>
+</tr>
+</tbody></table>
+<table cellpadding="1" cellspacing="1" border="1">
+<thead>
+<tr><td rowspan="1" colspan="3">Failure case 2</td></tr>
 </thead>
 <tbody>
 <tr><td>open</td><td>http://localhost:3000/course<datalist><option>http://localhost:3000/course</option></datalist></td><td></td>
@@ -91,7 +141,7 @@
 </tr>
 <tr><td>click</td><td>//div[@id='root']/div/header/header/div/article/div[4]<datalist><option>//div[@id='root']/div/header/header/div/article/div[4]</option><option>//div[4]</option></datalist></td><td></td>
 </tr>
-<tr><td>type</td><td>id=Course_name<datalist><option>id=Course_name</option><option>name=CourseName</option><option>//input[@id='Course_name']</option><option>//div[@id='root']/div/header/header/div/article/div[4]/div[2]/div/div/input</option><option>//div[4]/div[2]/div/div/input</option><option>css=#Course_name</option></datalist></td><td>วิศวกรรมเตมี 2560</td>
+<tr><td>type</td><td>id=Course_name<datalist><option>id=Course_name</option><option>name=CourseName</option><option>//input[@id='Course_name']</option><option>//div[@id='root']/div/header/header/div/article/div[4]/div[2]/div/div/input</option><option>//div[4]/div[2]/div/div/input</option><option>css=#Course_name</option></datalist></td><td>COMPUTER ENGINEERING 2560</td>
 </tr>
 <tr><td>click</td><td>//div[@id='root']/div/header/header/div<datalist><option>//div[@id='root']/div/header/header/div</option><option>//header/div</option><option>css=div.makeStyles-root-18</option></datalist></td><td></td>
 </tr>
@@ -104,6 +154,56 @@
 <tr><td>click</td><td>//div[@id='root']/div/header/header/div/article/div[7]/button/span<datalist><option>//div[@id='root']/div/header/header/div/article/div[7]/button/span</option><option>//button/span</option><option>css=span.MuiButton-label</option></datalist></td><td></td>
 </tr>
 <tr><td>assertText</td><td>id=swal2-title<datalist><option>id=swal2-title</option><option>//h2[@id='swal2-title']</option><option>//h2</option><option>css=#swal2-title</option></datalist></td><td>รหัสอาจารย์ขึ้นต้นด้วย T ตามด้วยตัวเลข 7 หลัก</td>
+</tr>
+</tbody></table>
+<table cellpadding="1" cellspacing="1" border="1">
+<thead>
+<tr><td rowspan="1" colspan="3">Faillure case 3</td></tr>
+</thead>
+<tbody>
+<tr><td>open</td><td>http://localhost:3000/course<datalist><option>http://localhost:3000/course</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>id=email<datalist><option>id=email</option><option>name=email</option><option>//input[@id='email']</option><option>//div[@id='root']/div/main/div/form/div/div/input</option><option>//input</option><option>css=#email</option></datalist></td><td></td>
+</tr>
+<tr><td>type</td><td>id=email<datalist><option>id=email</option><option>name=email</option><option>//input[@id='email']</option><option>//div[@id='root']/div/main/div/form/div/div/input</option><option>//input</option><option>css=#email</option></datalist></td><td>kwan@email.com</td>
+</tr>
+<tr><td>click</td><td>id=password<datalist><option>id=password</option><option>name=password</option><option>//input[@id='password']</option><option>//div[@id='root']/div/main/div/form/div[2]/div/input</option><option>//div[2]/div/input</option><option>css=#password</option></datalist></td><td></td>
+</tr>
+<tr><td>type</td><td>id=password<datalist><option>id=password</option><option>name=password</option><option>//input[@id='password']</option><option>//div[@id='root']/div/main/div/form/div[2]/div/input</option><option>//div[2]/div/input</option><option>css=#password</option></datalist></td><td>kwan</td>
+</tr>
+<tr><td>click</td><td>//div[@id='root']/div/main/div/form/a/span<datalist><option>//div[@id='root']/div/main/div/form/a/span</option><option>//a/span</option><option>css=span.MuiButton-label</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>//div[@id='root']/div/header/header/div[2]/div<datalist><option>//div[@id='root']/div/header/header/div[2]/div</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>//div[@id='root']/div/header/header/div[2]/div/a[2]/h6<datalist><option>//div[@id='root']/div/header/header/div[2]/div/a[2]/h6</option><option>//a[2]/h6</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>id=mui-component-select-DepartmentID<datalist><option>id=mui-component-select-DepartmentID</option><option>//body</option><option>css=body.vsc-initialized</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>//div[@id='menu-DepartmentID']/div[3]/ul/li[5]<datalist><option>//div[@id='menu-DepartmentID']/div[3]/ul/li[5]</option><option>//li[5]</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>id=mui-component-select-SubjectID<datalist><option>id=mui-component-select-SubjectID</option><option>//body</option><option>css=body.vsc-initialized</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>//div[@id='menu-SubjectID']/div[3]/ul/li<datalist><option>//div[@id='menu-SubjectID']/div[3]/ul/li</option><option>//li</option><option>css=li.MuiButtonBase-root.MuiListItem-root.MuiMenuItem-root.MuiMenuItem-gutters.MuiListItem-gutters.MuiListItem-button</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>id=mui-component-select-DegreeID<datalist><option>id=mui-component-select-DegreeID</option><option>//body</option><option>css=body.vsc-initialized</option><option>id=mui-component-select-SubjectID</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>//div[@id='menu-DegreeID']/div[3]/ul/li<datalist><option>//div[@id='menu-DegreeID']/div[3]/ul/li</option><option>//li</option><option>css=li.MuiButtonBase-root.MuiListItem-root.MuiMenuItem-root.MuiMenuItem-gutters.MuiListItem-gutters.MuiListItem-button</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>//div[@id='root']/div/header/header/div/article/div[4]<datalist><option>//div[@id='root']/div/header/header/div/article/div[4]</option><option>//div[4]</option></datalist></td><td></td>
+</tr>
+<tr><td>type</td><td>id=Course_name<datalist><option>id=Course_name</option><option>name=CourseName</option><option>//input[@id='Course_name']</option><option>//div[@id='root']/div/header/header/div/article/div[4]/div[2]/div/div/input</option><option>//div[4]/div[2]/div/div/input</option><option>css=#Course_name</option></datalist></td><td>COMPUTER ENGINEERING 2560</td>
+</tr>
+<tr><td>click</td><td>//div[@id='root']/div/header/header/div<datalist><option>//div[@id='root']/div/header/header/div</option><option>//header/div</option><option>css=div.makeStyles-root-18</option></datalist></td><td></td>
+</tr>
+<tr><td>type</td><td>id=Teacher_id<datalist><option>id=Teacher_id</option><option>name=TeacherID</option><option>//input[@id='Teacher_id']</option><option>//div[@id='root']/div/header/header/div/article/div[5]/div[2]/div/div/input</option><option>//div[5]/div[2]/div/div/input</option><option>css=#Teacher_id</option></datalist></td><td>T0000001</td>
+</tr>
+<tr><td>click</td><td>//div[@id='root']/div/header/header/div<datalist><option>//div[@id='root']/div/header/header/div</option><option>//header/div</option><option>css=div.makeStyles-root-18</option></datalist></td><td></td>
+</tr>
+<tr><td>type</td><td>id=Course_year<datalist><option>id=Course_year</option><option>name=CourseYear</option><option>//input[@id='Course_year']</option><option>//div[@id='root']/div/header/header/div/article/div[6]/div[2]/div/div/input</option><option>//div[6]/div[2]/div/div/input</option><option>css=#Course_year</option></datalist></td><td>ght</td>
+</tr>
+<tr><td>click</td><td>//div[@id='root']/div/header/header/div/article/div[7]/button/span<datalist><option>//div[@id='root']/div/header/header/div/article/div[7]/button/span</option><option>//button/span</option><option>css=span.MuiButton-label</option></datalist></td><td></td>
+</tr>
+<tr><td>assertText</td><td>id=swal2-title<datalist><option>id=swal2-title</option><option>//h2[@id='swal2-title']</option><option>//h2</option><option>css=#swal2-title</option></datalist></td><td>ปีของหลักสูตรต้องเป็นตัวเลข จำนวนเต็มบวก</td>
 </tr>
 </tbody></table>
 </body>
