--- a/UAT/B6115708_Test_Case 2.html
+++ b/UAT/B6115708_Test_Case 2.html
@@ -27,7 +27,7 @@
 </tr>
 <tr><td>click</td><td>name=name<datalist><option>name=name</option><option>//input[@name='name']</option><option>//div[@id='root']/div/header/header/article/div/div[2]/form/div/div/input</option><option>//input</option><option>css=input[name="name"]</option></datalist></td><td></td>
 </tr>
-<tr><td>type</td><td>name=name<datalist><option>name=name</option><option>//input[@name='name']</option><option>//div[@id='root']/div/header/header/article/div/div[2]/form/div/div/input</option><option>//input</option><option>css=input[name="name"]</option></datalist></td><td>COMPUTER ENGINEERING</td>
+<tr><td>type</td><td>name=name<datalist><option>name=name</option><option>//input[@name='name']</option><option>//div[@id='root']/div/header/header/article/div/div[2]/form/div/div/input</option><option>//input</option><option>css=input[name="name"]</option></datalist></td><td>ComputerEngineering2560</td>
 </tr>
 <tr><td>click</td><td>//div[@id='root']/div/header/header/article/div/div[3]/button/span<datalist><option>//div[@id='root']/div/header/header/article/div/div[3]/button/span</option><option>//span</option><option>css=span.MuiButton-label</option></datalist></td><td></td>
 </tr>
