--- a/UAT/B6115708_Test_Case.html
+++ b/UAT/B6115708_Test_Case.html
@@ -29,7 +29,7 @@
 </tr>
 <tr><td>click</td><td>id=mui-component-select-DepartmentID<datalist><option>//body</option><option>css=body.vsc-initialized</option><option>id=mui-component-select-DepartmentID</option></datalist></td><td></td>
 </tr>
-<tr><td>click</td><td>//div[@id='menu-DepartmentID']/div[3]/ul/li[7]<datalist><option>//div[@id='menu-DepartmentID']/div[3]/ul/li[7]</option><option>//li[7]</option></datalist></td><td></td>
+<tr><td>click</td><td>//div[@id='menu-DepartmentID']/div[3]/ul/li[4]<datalist><option>//div[@id='menu-DepartmentID']/div[3]/ul/li[4]</option><option>//li[4]</option><option>css=li.MuiButtonBase-root.MuiListItem-root.MuiMenuItem-root.Mui-selected.MuiMenuItem-gutters.MuiListItem-gutters.MuiListItem-button.Mui-selected</option></datalist></td><td></td>
 </tr>
 <tr><td>click</td><td>id=mui-component-select-SubjectID<datalist><option>//body</option><option>css=body.vsc-initialized</option><option>id=mui-component-select-SubjectID</option></datalist></td><td></td>
 </tr>
@@ -41,11 +41,11 @@
 </tr>
 <tr><td>click</td><td>//div[@id='root']/div/header/header/div<datalist><option>//div[@id='root']/div/header/header/div</option><option>//header/div</option><option>css=div.makeStyles-root-18</option></datalist></td><td></td>
 </tr>
-<tr><td>type</td><td>id=Course_name<datalist><option>id=Course_name</option><option>name=CourseName</option><option>//input[@id='Course_name']</option><option>//div[@id='root']/div/header/header/div/article/div[4]/div[2]/div/div/input</option><option>//div[4]/div[2]/div/div/input</option><option>css=#Course_name</option></datalist></td><td>COMPUTER ENGINEERING 2560</td>
+<tr><td>type</td><td>id=Course_name<datalist><option>id=Course_name</option><option>name=CourseName</option><option>//input[@id='Course_name']</option><option>//div[@id='root']/div/header/header/div/article/div[4]/div[2]/div/div/input</option><option>//div[4]/div[2]/div/div/input</option><option>css=#Course_name</option></datalist></td><td>ComputerEngineering2560</td>
 </tr>
 <tr><td>click</td><td>//div[@id='root']/div/header/header/div<datalist><option>//div[@id='root']/div/header/header/div</option><option>//header/div</option><option>css=div.makeStyles-root-18</option></datalist></td><td></td>
 </tr>
-<tr><td>type</td><td>id=Teacher_id<datalist><option>id=Teacher_id</option><option>name=TeacherID</option><option>//input[@id='Teacher_id']</option><option>//div[@id='root']/div/header/header/div/article/div[5]/div[2]/div/div/input</option><option>//div[5]/div[2]/div/div/input</option><option>css=#Teacher_id</option></datalist></td><td>T0354756</td>
+<tr><td>type</td><td>id=Teacher_id<datalist><option>id=Teacher_id</option><option>name=TeacherID</option><option>//input[@id='Teacher_id']</option><option>//div[@id='root']/div/header/header/div/article/div[5]/div[2]/div/div/input</option><option>//div[5]/div[2]/div/div/input</option><option>css=#Teacher_id</option></datalist></td><td>T0000001</td>
 </tr>
 <tr><td>click</td><td>//div[@id='root']/div/header/header/div<datalist><option>//div[@id='root']/div/header/header/div</option><option>//header/div</option><option>css=div.makeStyles-root-18</option></datalist></td><td></td>
 </tr>
@@ -79,7 +79,7 @@
 </tr>
 <tr><td>click</td><td>id=mui-component-select-DepartmentID<datalist><option>id=mui-component-select-DepartmentID</option><option>//body</option><option>css=body.vsc-initialized</option></datalist></td><td></td>
 </tr>
-<tr><td>click</td><td>//div[@id='menu-DepartmentID']/div[3]/ul/li[5]<datalist><option>//div[@id='menu-DepartmentID']/div[3]/ul/li[5]</option><option>//li[5]</option></datalist></td><td></td>
+<tr><td>click</td><td>//div[@id='menu-DepartmentID']/div[3]/ul/li[5]<datalist><option>//div[@id='menu-DepartmentID']/div[3]/ul/li[5]</option><option>//li[5]</option><option>//div[@id='menu-DepartmentID']/div[3]/ul/li[4]</option></datalist></td><td></td>
 </tr>
 <tr><td>click</td><td>id=mui-component-select-SubjectID<datalist><option>id=mui-component-select-SubjectID</option><option>//body</option><option>css=body.vsc-initialized</option></datalist></td><td></td>
 </tr>
@@ -103,7 +103,7 @@
 </tr>
 <tr><td>click</td><td>//div[@id='root']/div/header/header/div/article/div[7]/button/span<datalist><option>//div[@id='root']/div/header/header/div/article/div[7]/button/span</option><option>//button/span</option><option>css=span.MuiButton-label</option></datalist></td><td></td>
 </tr>
-<tr><td>assertText</td><td>id=swal2-title<datalist><option>id=swal2-title</option><option>//h2[@id='swal2-title']</option><option>//h2</option><option>css=#swal2-title</option></datalist></td><td>ชื่อหลักสูตรต้องเป็น a-z หรือ A-Z หรือ 0-9</td>
+<tr><td>assertText</td><td>id=swal2-title<datalist><option>id=swal2-title</option><option>//h2[@id='swal2-title']</option><option>//h2</option><option>css=#swal2-title</option></datalist></td><td>ชื่อหลักสูตรต้องเป็นตัวอักษร A-Z หรือ a-z หรือ 0-9</td>
 </tr>
 </tbody></table>
 <table cellpadding="1" cellspacing="1" border="1">
@@ -129,7 +129,7 @@
 </tr>
 <tr><td>click</td><td>id=mui-component-select-DepartmentID<datalist><option>//body</option><option>css=body.vsc-initialized</option><option>id=mui-component-select-DepartmentID</option></datalist></td><td></td>
 </tr>
-<tr><td>click</td><td>//div[@id='menu-DepartmentID']/div[3]/ul/li[5]<datalist><option>//div[@id='menu-DepartmentID']/div[3]/ul/li[5]</option><option>//li[5]</option></datalist></td><td></td>
+<tr><td>click</td><td>//div[@id='menu-DepartmentID']/div[3]/ul/li[6]<datalist><option>//div[@id='menu-DepartmentID']/div[3]/ul/li[5]</option><option>//li[5]</option><option>//div[@id='menu-DepartmentID']/div[3]/ul/li[4]</option><option>//div[@id='menu-DepartmentID']/div[3]/ul/li[6]</option></datalist></td><td></td>
 </tr>
 <tr><td>click</td><td>id=mui-component-select-SubjectID<datalist><option>//body</option><option>css=body.vsc-initialized</option><option>id=mui-component-select-SubjectID</option></datalist></td><td></td>
 </tr>
@@ -141,7 +141,7 @@
 </tr>
 <tr><td>click</td><td>//div[@id='root']/div/header/header/div/article/div[4]<datalist><option>//div[@id='root']/div/header/header/div/article/div[4]</option><option>//div[4]</option></datalist></td><td></td>
 </tr>
-<tr><td>type</td><td>id=Course_name<datalist><option>id=Course_name</option><option>name=CourseName</option><option>//input[@id='Course_name']</option><option>//div[@id='root']/div/header/header/div/article/div[4]/div[2]/div/div/input</option><option>//div[4]/div[2]/div/div/input</option><option>css=#Course_name</option></datalist></td><td>COMPUTER ENGINEERING 2560</td>
+<tr><td>type</td><td>id=Course_name<datalist><option>id=Course_name</option><option>name=CourseName</option><option>//input[@id='Course_name']</option><option>//div[@id='root']/div/header/header/div/article/div[4]/div[2]/div/div/input</option><option>//div[4]/div[2]/div/div/input</option><option>css=#Course_name</option></datalist></td><td>MechanicalEngineering2560</td>
 </tr>
 <tr><td>click</td><td>//div[@id='root']/div/header/header/div<datalist><option>//div[@id='root']/div/header/header/div</option><option>//header/div</option><option>css=div.makeStyles-root-18</option></datalist></td><td></td>
 </tr>
@@ -179,7 +179,7 @@
 </tr>
 <tr><td>click</td><td>id=mui-component-select-DepartmentID<datalist><option>id=mui-component-select-DepartmentID</option><option>//body</option><option>css=body.vsc-initialized</option></datalist></td><td></td>
 </tr>
-<tr><td>click</td><td>//div[@id='menu-DepartmentID']/div[3]/ul/li[5]<datalist><option>//div[@id='menu-DepartmentID']/div[3]/ul/li[5]</option><option>//li[5]</option></datalist></td><td></td>
+<tr><td>click</td><td>//div[@id='menu-DepartmentID']/div[3]/ul/li[7]<datalist><option>//div[@id='menu-DepartmentID']/div[3]/ul/li[5]</option><option>//li[5]</option><option>//div[@id='menu-DepartmentID']/div[3]/ul/li[4]</option><option>//div[@id='menu-DepartmentID']/div[3]/ul/li[7]</option></datalist></td><td></td>
 </tr>
 <tr><td>click</td><td>id=mui-component-select-SubjectID<datalist><option>id=mui-component-select-SubjectID</option><option>//body</option><option>css=body.vsc-initialized</option></datalist></td><td></td>
 </tr>
@@ -191,7 +191,7 @@
 </tr>
 <tr><td>click</td><td>//div[@id='root']/div/header/header/div/article/div[4]<datalist><option>//div[@id='root']/div/header/header/div/article/div[4]</option><option>//div[4]</option></datalist></td><td></td>
 </tr>
-<tr><td>type</td><td>id=Course_name<datalist><option>id=Course_name</option><option>name=CourseName</option><option>//input[@id='Course_name']</option><option>//div[@id='root']/div/header/header/div/article/div[4]/div[2]/div/div/input</option><option>//div[4]/div[2]/div/div/input</option><option>css=#Course_name</option></datalist></td><td>COMPUTER ENGINEERING 2560</td>
+<tr><td>type</td><td>id=Course_name<datalist><option>id=Course_name</option><option>name=CourseName</option><option>//input[@id='Course_name']</option><option>//div[@id='root']/div/header/header/div/article/div[4]/div[2]/div/div/input</option><option>//div[4]/div[2]/div/div/input</option><option>css=#Course_name</option></datalist></td><td>CeramicEngineering2560</td>
 </tr>
 <tr><td>click</td><td>//div[@id='root']/div/header/header/div<datalist><option>//div[@id='root']/div/header/header/div</option><option>//header/div</option><option>css=div.makeStyles-root-18</option></datalist></td><td></td>
 </tr>
@@ -199,7 +199,7 @@
 </tr>
 <tr><td>click</td><td>//div[@id='root']/div/header/header/div<datalist><option>//div[@id='root']/div/header/header/div</option><option>//header/div</option><option>css=div.makeStyles-root-18</option></datalist></td><td></td>
 </tr>
-<tr><td>type</td><td>id=Course_year<datalist><option>id=Course_year</option><option>name=CourseYear</option><option>//input[@id='Course_year']</option><option>//div[@id='root']/div/header/header/div/article/div[6]/div[2]/div/div/input</option><option>//div[6]/div[2]/div/div/input</option><option>css=#Course_year</option></datalist></td><td>ght</td>
+<tr><td>type</td><td>id=Course_year<datalist><option>id=Course_year</option><option>name=CourseYear</option><option>//input[@id='Course_year']</option><option>//div[@id='root']/div/header/header/div/article/div[6]/div[2]/div/div/input</option><option>//div[6]/div[2]/div/div/input</option><option>css=#Course_year</option></datalist></td><td>0</td>
 </tr>
 <tr><td>click</td><td>//div[@id='root']/div/header/header/div/article/div[7]/button/span<datalist><option>//div[@id='root']/div/header/header/div/article/div[7]/button/span</option><option>//button/span</option><option>css=span.MuiButton-label</option></datalist></td><td></td>
 </tr>
