--- a/UAT/B6107192_Test_Case.html
+++ b/UAT/B6107192_Test_Case.html
@@ -53,9 +53,7 @@
 </tr>
 <tr><td>type</td><td>name=Remain<datalist><option>name=Remain</option><option>//input[@name='Remain']</option><option>//div[@id='root']/div/header/header/div/article/div[2]/div/div[13]/form/div/div/input</option><option>//div[13]/form/div/div/input</option><option>css=input[name="Remain"]</option></datalist></td><td>15</td>
 </tr>
-<tr><td>click</td><td>name=STATUS<datalist><option>name=STATUS</option><option>//input[@name='STATUS']</option><option>//div[@id='root']/div/header/header/div/article/div[2]/div/div[13]/form/div/div/input</option><option>//div[13]/form/div/div/input</option><option>css=input[name="STATUS"]</option></datalist></td><td></td>
-</tr>
-<tr><td>type</td><td>name=STATUS<datalist><option>name=STATUS</option><option>//input[@name='STATUS']</option><option>//div[@id='root']/div/header/header/div/article/div[2]/div/div[13]/form/div/div/input</option><option>//div[13]/form/div/div/input</option><option>css=input[name="STATUS"]</option></datalist></td><td>Open</td>
+<tr><td>click</td><td>id=STATUS<datalist><option>id=STATUS</option><option>name=Open</option><option>//input[@id='STATUS']</option><option>//div[@id='root']/div/header/header/div/article/div[2]/div/div[15]/fieldset/div/label/span/span/input</option><option>//span/input</option><option>css=#STATUS</option></datalist></td><td></td>
 </tr>
 <tr><td>click</td><td>//button[@type='button']<datalist><option>//button[@type='button']</option><option>//div[@id='root']/div/header/header/div/article/div[2]/div/div[17]/button</option><option>//button</option><option>css=button.MuiButtonBase-root.MuiButton-root.MuiButton-contained.MuiButton-containedPrimary</option></datalist></td><td></td>
 </tr>
@@ -105,9 +103,7 @@
 </tr>
 <tr><td>type</td><td>name=Remain<datalist><option>name=Remain</option><option>//input[@name='Remain']</option><option>//div[@id='root']/div/header/header/div/article/div[2]/div/div[13]/form/div/div/input</option><option>//div[13]/form/div/div/input</option><option>css=input[name="Remain"]</option></datalist></td><td>10</td>
 </tr>
-<tr><td>click</td><td>name=STATUS<datalist><option>name=STATUS</option><option>//input[@name='STATUS']</option><option>//div[@id='root']/div/header/header/div/article/div[2]/div/div[15]/form/div/div/input</option><option>//div[15]/form/div/div/input</option><option>css=input[name="STATUS"]</option></datalist></td><td></td>
-</tr>
-<tr><td>type</td><td>name=STATUS<datalist><option>name=STATUS</option><option>//input[@name='STATUS']</option><option>//div[@id='root']/div/header/header/div/article/div[2]/div/div[15]/form/div/div/input</option><option>//div[15]/form/div/div/input</option><option>css=input[name="STATUS"]</option></datalist></td><td>Open</td>
+<tr><td>click</td><td>id=STATUS<datalist><option>id=STATUS</option><option>name=Open</option><option>//input[@id='STATUS']</option><option>//div[@id='root']/div/header/header/div/article/div[2]/div/div[15]/fieldset/div/label/span/span/input</option><option>//span/input</option><option>css=#STATUS</option></datalist></td><td></td>
 </tr>
 <tr><td>click</td><td>//button[@type='button']<datalist><option>//button[@type='button']</option><option>//div[@id='root']/div/header/header/div/article/div[2]/div/div[17]/button</option><option>//button</option><option>css=button.MuiButtonBase-root.MuiButton-root.MuiButton-contained.MuiButton-containedPrimary</option></datalist></td><td></td>
 </tr>
@@ -125,11 +121,9 @@
 </tr>
 <tr><td>click</td><td>name=Remain<datalist><option>name=Remain</option><option>//input[@name='Remain']</option><option>//div[@id='root']/div/header/header/div/article/div[2]/div/div[13]/form/div/div/input</option><option>//div[13]/form/div/div/input</option><option>css=input[name="Remain"]</option></datalist></td><td></td>
 </tr>
-<tr><td>type</td><td>name=Remain<datalist><option>name=Remain</option><option>//input[@name='Remain']</option><option>//div[@id='root']/div/header/header/div/article/div[2]/div/div[13]/form/div/div/input</option><option>//div[13]/form/div/div/input</option><option>css=input[name="Remain"]</option></datalist></td><td>abc</td>
+<tr><td>type</td><td>name=Remain<datalist><option>name=Remain</option><option>//input[@name='Remain']</option><option>//div[@id='root']/div/header/header/div/article/div[2]/div/div[13]/form/div/div/input</option><option>//div[13]/form/div/div/input</option><option>css=input[name="Remain"]</option></datalist></td><td>-10</td>
 </tr>
-<tr><td>click</td><td>name=STATUS<datalist><option>name=STATUS</option><option>//input[@name='STATUS']</option><option>//div[@id='root']/div/header/header/div/article/div[2]/div/div[15]/form/div/div/input</option><option>//div[15]/form/div/div/input</option><option>css=input[name="STATUS"]</option></datalist></td><td></td>
-</tr>
-<tr><td>type</td><td>name=STATUS<datalist><option>name=STATUS</option><option>//input[@name='STATUS']</option><option>//div[@id='root']/div/header/header/div/article/div[2]/div/div[15]/form/div/div/input</option><option>//div[15]/form/div/div/input</option><option>css=input[name="STATUS"]</option></datalist></td><td>Open</td>
+<tr><td>click</td><td>id=STATUS<datalist><option>id=STATUS</option><option>name=Open</option><option>//input[@id='STATUS']</option><option>//div[@id='root']/div/header/header/div/article/div[2]/div/div[15]/fieldset/div/label/span/span/input</option><option>//span/input</option><option>css=#STATUS</option></datalist></td><td></td>
 </tr>
 <tr><td>click</td><td>//button[@type='button']<datalist><option>//button[@type='button']</option><option>//div[@id='root']/div/header/header/div/article/div[2]/div/div[17]/button</option><option>//button</option><option>css=button.MuiButtonBase-root.MuiButton-root.MuiButton-contained.MuiButton-containedPrimary</option></datalist></td><td></td>
 </tr>
@@ -149,9 +143,9 @@
 </tr>
 <tr><td>type</td><td>name=Remain<datalist><option>name=Remain</option><option>//input[@name='Remain']</option><option>//div[@id='root']/div/header/header/div/article/div[2]/div/div[13]/form/div/div/input</option><option>//div[13]/form/div/div/input</option><option>css=input[name="Remain"]</option></datalist></td><td>10</td>
 </tr>
-<tr><td>click</td><td>name=STATUS<datalist><option>name=STATUS</option><option>//input[@name='STATUS']</option><option>//div[@id='root']/div/header/header/div/article/div[2]/div/div[15]/form/div/div/input</option><option>//div[15]/form/div/div/input</option><option>css=input[name="STATUS"]</option></datalist></td><td></td>
+<tr><td>click</td><td>id=STATUS<datalist><option>id=STATUS</option><option>name=Open</option><option>//input[@id='STATUS']</option><option>//div[@id='root']/div/header/header/div/article/div[2]/div/div[15]/fieldset/div/label/span/span/input</option><option>//span/input</option><option>css=#STATUS</option></datalist></td><td></td>
 </tr>
-<tr><td>type</td><td>name=STATUS<datalist><option>name=STATUS</option><option>//input[@name='STATUS']</option><option>//div[@id='root']/div/header/header/div/article/div[2]/div/div[15]/form/div/div/input</option><option>//div[15]/form/div/div/input</option><option>css=input[name="STATUS"]</option></datalist></td><td>mn</td>
+<tr><td>click</td><td>id=STATUS<datalist><option>id=STATUS</option><option>name=Open</option><option>//input[@id='STATUS']</option><option>//div[@id='root']/div/header/header/div/article/div[2]/div/div[15]/fieldset/div/label/span/span/input</option><option>//span/input</option><option>css=#STATUS</option></datalist></td><td></td>
 </tr>
 <tr><td>click</td><td>//button[@type='button']<datalist><option>//button[@type='button']</option><option>//div[@id='root']/div/header/header/div/article/div[2]/div/div[17]/button</option><option>//button</option><option>css=button.MuiButtonBase-root.MuiButton-root.MuiButton-contained.MuiButton-containedPrimary</option></datalist></td><td></td>
 </tr>
